--- a/src/scss/description.scss
+++ b/src/scss/description.scss
@@ -6,17 +6,42 @@
     padding:0;
     display:flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    padding:50vh;
+    justify-content: space-around;
+    align-items: center;
+
     h1{
         font-size: $TITLE1;
+        width: max-content;
 
 
     }
     p{
         font-size: $PARAG;
 
+    }
+
+    .icon_details{
+        display: flex;
+        justify-content: space-around;
+
+        .cards_descr{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 20%;
+
+            h3{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding-left: 10px;
+
+            }
+        .icone{
+        height: 100px;
+        width: 100px;
+
+        }   }
     }
 
 }
