--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -4,7 +4,7 @@ position: relative;
 top: -150px;
 display: flex;
 justify-content: space-around;
-
+font-size: $PARAG;
 list-style:none;
 width: 100%;
 }
