--- a/src/scss/description.scss
+++ b/src/scss/description.scss
@@ -17,6 +17,11 @@
     }
     p{
         font-size: $PARAG;
+        margin-left: 50px;
+        margin-right: 50px;
+        height: 20%;
+        line-height:2;
+
 
     }
 
