--- a/src/scss/description.scss
+++ b/src/scss/description.scss
@@ -19,7 +19,6 @@
         font-size: $PARAG;
         margin-left: 50px;
         margin-right: 50px;
-        height: 20%;
         line-height:2;
 
 
@@ -28,6 +27,7 @@
     .icon_details{
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
 
         .cards_descr{
             display: flex;
@@ -50,3 +50,37 @@
     }
 
 }
+@media screen and (max-width: 900px) {
+    .apropos{
+
+
+        p{
+
+            line-height: 1;
+            margin-left: 20px;
+            margin-right: 20px;
+            height: auto;
+
+        }
+    
+        .cards_descr{
+
+
+            h3{
+
+
+            }
+        .icone{
+        height: 50px;
+        width: 50px;
+
+        }   }
+    
+    
+    
+    }}
+
+
+    
+
+
