--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -1,12 +1,9 @@
 .navigation{
-
-position: relative;
-top: -150px;
-display: flex;
-justify-content: space-around;
-font-size: $PARAG;
-list-style:none;
-width: 100%;
+    display: flex;
+    justify-content: space-around;
+    font-size: $PARAG;
+    list-style:none;
+    width: 100%;
 }
 
 .navigation:hover{
@@ -18,3 +15,19 @@ text-decoration: underline;
 
 }
 }
+
+@media screen and (max-width: 900px) {
+
+    .navigation{
+    flex-direction: column;
+    position: absolute;}
+
+}
+
+@media screen and (max-width: 600px) {
+
+    
+
+
+    
+    }
