--- a/src/scss/profil.scss
+++ b/src/scss/profil.scss
@@ -5,35 +5,34 @@
         $GREEN,
         $YELLOW);
     height: calc(100vh);
-    width: 100%;
-
     display: flex;
     justify-content:flex-start;
-    align-items: center;    
-    article{
-        margin: 50px;
-        width: 80%;
+    align-items: center;
+
+    .wrapper_nav_text{
+        margin: 0;
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: space-around;
         color:$BLACK_FONT;
-        height: 50%;
+        height: 100%;
 
     }
+
     h1{
-        margin: 10px;
+        margin: 20px;
         padding: 0;
         font-size: $TITLE1;
 
     }   
     h2{
-        margin: 10px;
+        margin: 20px;
         padding: 0;
         font-size: $TITLE2;
 
     }
     p{
-        margin: 10px;
+        margin: 20px;
         padding: 0;
         font-size: $PARAG;
 
@@ -49,10 +48,8 @@
     }
 .avatar{
     margin: 0;
-    padding: 0;
-    width: 20%;
+    max-width:100%;
     height: 100%;
-
     background-color:$GRAY_BACK;
     display: flex;
     justify-content: center;
@@ -66,4 +63,32 @@
 
     }
 }
+}
+
+@media screen and (max-width: 600px) {
+
+
+.profil{
+
+    article{
+        margin: 0;
+
+    }
+    .avatar{
+
+        position: absolute;
+        background-color: transparent;
+        opacity: 0.3;
+        height: auto;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+        text-align: center;
+    }   
+}
+
+
+
 }
