--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -11,7 +11,6 @@
         .icone_ext{
             display: flex;
             justify-content: space-between;
-            width: 20%;
         }
         img{
 
@@ -22,8 +21,8 @@
         .reserved{
             display: flex;
             justify-content: center;
-
             width: 100%;
+            text-align: center;
 
         }
 
