--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -29,3 +29,32 @@
     }
 
 }
+
+@media screen and (max-width: 900px) {
+    .gallery{
+
+        height: auto;
+        // width:100%;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: space-evenly;
+        // align-items: center;
+        // background-color:$GRAY_BACK_GALLERY ;
+padding-bottom: 10%;    
+
+        h1{
+    
+            font-size: $TITLE1;
+        }
+    
+        .grid_portefolio{
+    
+            display: grid;
+            // gap:20px 20px;
+            grid-template-columns: 1fr;
+            height: 50%;
+            width: 90%;
+        margin-bottom: 10%;
+            
+        }}
+}
