--- a/src/scss/profil.scss
+++ b/src/scss/profil.scss
@@ -50,7 +50,8 @@
     margin: 0;
     max-width:100%;
     height: 100%;
-    background-color:$GRAY_BACK;
+    background-color: transparent;
+    opacity: 0.3;    
     display: flex;
     justify-content: center;
     align-items: center;
