--- a/src/scss/Carousel.scss
+++ b/src/scss/Carousel.scss
@@ -2,36 +2,41 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    a{
-        height: 100%;
-        width: 100%;
-    }
-
 }
 
 .carousel-wrapper {
     display: flex;
-    width: 100%;
     position: relative;
     height: 100%;
 }
 
 .carousel-content-wrapper {
     overflow: hidden;
-    width: 100%;
-    height: 100%;
+
 }
 
 .carousel-content {
     display: flex;
     transition: all 250ms linear;
+    height: 100%;
+    width: 100%;
     -ms-overflow-style: none;  /* hide scrollbar in IE and Edge */
     scrollbar-width: none;  /* hide scrollbar in Firefox */
-        img{
-            object-fit: cover;
-            height: 100%; 
 
-         }
+
+    a{
+
+        height: 100%;
+        width: 100%;
+
+        img{
+
+            height: 100%;
+            width: 100%;
+            object-fit: fill;
+        }
+    }
+
 }
 
 /* hide scrollbar in webkit browser */
