--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -21,6 +21,79 @@
     .grid_portefolio{
         height: 70%;
         width: 100%;
+        .grid_container{
+            padding-left: 5%;
+            padding-right: 5%;
+            display: grid;
+            grid-template-columns: auto auto auto;
+            gap: 20px;
+
+            a{
+                width: 100%;
+                height: 100%;
+                border-radius: 20px;
+                box-shadow: 0px 0px 10px 1px #000;
+
+                img{
+
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 20px;
+
+                }
+            }
+
+        }
     }
 
 }
+
+@media screen and (max-width: 1000px) {
+
+
+    .gallery{
+
+
+        
+    
+
+    
+        .grid_portefolio{
+
+            .grid_container{
+
+                grid-template-columns: auto auto;
+
+    
+            }
+        }
+    
+    }
+    
+    }
+
+    @media screen and (max-width: 600px) {
+
+
+        .gallery{
+    
+            height: auto;
+            padding-bottom: 20px;
+
+            
+        
+    
+        
+            .grid_portefolio{
+                margin-bottom: 20px;
+                .grid_container{
+    
+                    grid-template-columns: auto;
+    
+        
+                }
+            }
+        
+        }
+        
+        }
